added matchup notebooks, fanduel-files

--- a/src/analyzing-slates.ipynb
+++ b/src/analyzing-slates.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "western-segment",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "oriental-lying",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "racial-parker",
    "metadata": {},
    "outputs": [],
@@ -85,15 +85,6 @@
     "    \n",
     "    df['slate_cat'] = df['slate_cat'].astype('uint8')\n",
     "    \n",
-    "    # Also be useful to label each matchup to see if some games command disproportionate amounts of fantasy points\n",
-    "    df['matchup'] = tuple(zip(df['team'], df['opp']))\n",
-    "    df['matchup'] = df['matchup'].map(lambda x: tuple(sorted(x)))\n",
-    "    \n",
-    "    # make list of matchups then assign index for each date\n",
-    "    # sort first so index is in order? highest index # was highest/lowest fantasy points?\n",
-    "    # add salaries as well for determining value\n",
-    "    \n",
-    "    \n",
     "#     fm.save_dataframe(df, 'season-data-slates')\n",
     "    return df\n",
     "#     return None"
@@ -102,24 +93,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "restricted-insured",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categorizing_slates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "systematic-satisfaction",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm.notebook import tqdm\n",
-    "def sorting_matchups(**kwargs):\n",
+    "def sort_matchups(**kwargs):\n",
     "    \n",
-    "    df: pd.DataFrame = fm.load_clean_data()\n",
+    "    # Add slate categories\n",
+    "    df: pd.DataFrame = categorizing_slates()\n",
+    "    \n",
     "    \n",
     "    # team fantasy points\n",
     "    tm = (df\n",
@@ -129,7 +111,6 @@
     "         )\n",
     "    \n",
     "    msg = 'Adding team fantasy points\\n'\n",
-    "    \n",
     "    print(msg)\n",
     "    for idx in tqdm(tm.index):\n",
     "        date, team = idx\n",
@@ -167,424 +148,10 @@
     "    for date, mu_totals in tqdm(matchup_info.items()):\n",
     "        for matchup, total in mu_totals.items():\n",
     "            df.loc[(df['date']==date) & (df['matchup']==matchup), 'mu_fpts'] = total\n",
+    "            \n",
+    "    fm.save_dataframe(df, 'season-data-added-info')\n",
     "    \n",
     "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "imported-oxford",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding team fantasy points\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95c5bbc3f9e74388b656d456ff3c4b4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1742 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding matchup fantasy points\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbd4539b497c4d529a04a5c5d1944bd8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/117 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>name</th>\n",
-       "      <th>team</th>\n",
-       "      <th>opp</th>\n",
-       "      <th>fpts</th>\n",
-       "      <th>mp</th>\n",
-       "      <th>fppm</th>\n",
-       "      <th>home</th>\n",
-       "      <th>w</th>\n",
-       "      <th>w_pts</th>\n",
-       "      <th>...</th>\n",
-       "      <th>tov_perc</th>\n",
-       "      <th>usg</th>\n",
-       "      <th>ortg</th>\n",
-       "      <th>drtg</th>\n",
-       "      <th>bpm</th>\n",
-       "      <th>total_pts</th>\n",
-       "      <th>pts_diff</th>\n",
-       "      <th>team_fpts</th>\n",
-       "      <th>matchup</th>\n",
-       "      <th>mu_fpts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-10-18</td>\n",
-       "      <td>Matt Ryan</td>\n",
-       "      <td>LAL</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>17.816667</td>\n",
-       "      <td>0.347989</td>\n",
-       "      <td>0</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>123</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.200</td>\n",
-       "      <td>0.107</td>\n",
-       "      <td>60</td>\n",
-       "      <td>111</td>\n",
-       "      <td>-10.6</td>\n",
-       "      <td>232</td>\n",
-       "      <td>-14</td>\n",
-       "      <td>228.1</td>\n",
-       "      <td>(GS, LAL)</td>\n",
-       "      <td>482.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-10-18</td>\n",
-       "      <td>Kendrick Nunn</td>\n",
-       "      <td>LAL</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>19.6</td>\n",
-       "      <td>23.050000</td>\n",
-       "      <td>0.850325</td>\n",
-       "      <td>0</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>123</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>0.198</td>\n",
-       "      <td>102</td>\n",
-       "      <td>111</td>\n",
-       "      <td>-0.3</td>\n",
-       "      <td>232</td>\n",
-       "      <td>-14</td>\n",
-       "      <td>228.1</td>\n",
-       "      <td>(GS, LAL)</td>\n",
-       "      <td>482.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-10-18</td>\n",
-       "      <td>Lonnie Walker</td>\n",
-       "      <td>LAL</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>20.1</td>\n",
-       "      <td>29.283333</td>\n",
-       "      <td>0.686397</td>\n",
-       "      <td>0</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>123</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.202</td>\n",
-       "      <td>0.129</td>\n",
-       "      <td>78</td>\n",
-       "      <td>112</td>\n",
-       "      <td>-5.5</td>\n",
-       "      <td>232</td>\n",
-       "      <td>-14</td>\n",
-       "      <td>228.1</td>\n",
-       "      <td>(GS, LAL)</td>\n",
-       "      <td>482.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-10-18</td>\n",
-       "      <td>Patrick Beverley</td>\n",
-       "      <td>LAL</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>25.4</td>\n",
-       "      <td>24.666667</td>\n",
-       "      <td>1.029730</td>\n",
-       "      <td>0</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>123</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.167</td>\n",
-       "      <td>0.093</td>\n",
-       "      <td>74</td>\n",
-       "      <td>97</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>232</td>\n",
-       "      <td>-14</td>\n",
-       "      <td>228.1</td>\n",
-       "      <td>(GS, LAL)</td>\n",
-       "      <td>482.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-10-18</td>\n",
-       "      <td>Russell Westbrook</td>\n",
-       "      <td>LAL</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>35.7</td>\n",
-       "      <td>30.683333</td>\n",
-       "      <td>1.163498</td>\n",
-       "      <td>0</td>\n",
-       "      <td>GS</td>\n",
-       "      <td>123</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.220</td>\n",
-       "      <td>0.226</td>\n",
-       "      <td>108</td>\n",
-       "      <td>107</td>\n",
-       "      <td>-0.3</td>\n",
-       "      <td>232</td>\n",
-       "      <td>-14</td>\n",
-       "      <td>228.1</td>\n",
-       "      <td>(GS, LAL)</td>\n",
-       "      <td>482.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18357</th>\n",
-       "      <td>2023-02-14</td>\n",
-       "      <td>Devin Booker</td>\n",
-       "      <td>PHO</td>\n",
-       "      <td>SAC</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>29.233333</td>\n",
-       "      <td>1.573546</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PHO</td>\n",
-       "      <td>120</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.042</td>\n",
-       "      <td>0.366</td>\n",
-       "      <td>136</td>\n",
-       "      <td>112</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>229</td>\n",
-       "      <td>11</td>\n",
-       "      <td>248.9</td>\n",
-       "      <td>(PHO, SAC)</td>\n",
-       "      <td>459.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18358</th>\n",
-       "      <td>2023-02-14</td>\n",
-       "      <td>Josh Okogie</td>\n",
-       "      <td>PHO</td>\n",
-       "      <td>SAC</td>\n",
-       "      <td>28.7</td>\n",
-       "      <td>39.433333</td>\n",
-       "      <td>0.727811</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PHO</td>\n",
-       "      <td>120</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.130</td>\n",
-       "      <td>0.174</td>\n",
-       "      <td>125</td>\n",
-       "      <td>122</td>\n",
-       "      <td>-0.1</td>\n",
-       "      <td>229</td>\n",
-       "      <td>11</td>\n",
-       "      <td>248.9</td>\n",
-       "      <td>(PHO, SAC)</td>\n",
-       "      <td>459.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18359</th>\n",
-       "      <td>2023-02-14</td>\n",
-       "      <td>Torrey Craig</td>\n",
-       "      <td>PHO</td>\n",
-       "      <td>SAC</td>\n",
-       "      <td>17.1</td>\n",
-       "      <td>30.033333</td>\n",
-       "      <td>0.569367</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PHO</td>\n",
-       "      <td>120</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.333</td>\n",
-       "      <td>0.133</td>\n",
-       "      <td>84</td>\n",
-       "      <td>117</td>\n",
-       "      <td>-4.3</td>\n",
-       "      <td>229</td>\n",
-       "      <td>11</td>\n",
-       "      <td>248.9</td>\n",
-       "      <td>(PHO, SAC)</td>\n",
-       "      <td>459.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18360</th>\n",
-       "      <td>2023-02-14</td>\n",
-       "      <td>Gary Harris</td>\n",
-       "      <td>ORL</td>\n",
-       "      <td>TOR</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>22.733333</td>\n",
-       "      <td>0.382698</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TOR</td>\n",
-       "      <td>123</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.058</td>\n",
-       "      <td>195</td>\n",
-       "      <td>132</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>236</td>\n",
-       "      <td>-10</td>\n",
-       "      <td>192.8</td>\n",
-       "      <td>(ORL, TOR)</td>\n",
-       "      <td>452.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18361</th>\n",
-       "      <td>2023-02-14</td>\n",
-       "      <td>Moritz Wagner</td>\n",
-       "      <td>ORL</td>\n",
-       "      <td>TOR</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>16.183333</td>\n",
-       "      <td>0.376931</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TOR</td>\n",
-       "      <td>123</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.145</td>\n",
-       "      <td>0.186</td>\n",
-       "      <td>64</td>\n",
-       "      <td>131</td>\n",
-       "      <td>-17.9</td>\n",
-       "      <td>236</td>\n",
-       "      <td>-10</td>\n",
-       "      <td>192.8</td>\n",
-       "      <td>(ORL, TOR)</td>\n",
-       "      <td>452.3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>18362 rows × 53 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             date               name team  opp  fpts         mp      fppm  \\\n",
-       "0      2022-10-18          Matt Ryan  LAL   GS   6.2  17.816667  0.347989   \n",
-       "1      2022-10-18      Kendrick Nunn  LAL   GS  19.6  23.050000  0.850325   \n",
-       "2      2022-10-18      Lonnie Walker  LAL   GS  20.1  29.283333  0.686397   \n",
-       "3      2022-10-18   Patrick Beverley  LAL   GS  25.4  24.666667  1.029730   \n",
-       "4      2022-10-18  Russell Westbrook  LAL   GS  35.7  30.683333  1.163498   \n",
-       "...           ...                ...  ...  ...   ...        ...       ...   \n",
-       "18357  2023-02-14       Devin Booker  PHO  SAC  46.0  29.233333  1.573546   \n",
-       "18358  2023-02-14        Josh Okogie  PHO  SAC  28.7  39.433333  0.727811   \n",
-       "18359  2023-02-14       Torrey Craig  PHO  SAC  17.1  30.033333  0.569367   \n",
-       "18360  2023-02-14        Gary Harris  ORL  TOR   8.7  22.733333  0.382698   \n",
-       "18361  2023-02-14      Moritz Wagner  ORL  TOR   6.1  16.183333  0.376931   \n",
-       "\n",
-       "       home    w  w_pts  ... tov_perc    usg  ortg  drtg   bpm  total_pts  \\\n",
-       "0         0   GS    123  ...    0.200  0.107    60   111 -10.6        232   \n",
-       "1         0   GS    123  ...    0.250  0.198   102   111  -0.3        232   \n",
-       "2         0   GS    123  ...    0.202  0.129    78   112  -5.5        232   \n",
-       "3         0   GS    123  ...    0.167  0.093    74    97   0.4        232   \n",
-       "4         0   GS    123  ...    0.220  0.226   108   107  -0.3        232   \n",
-       "...     ...  ...    ...  ...      ...    ...   ...   ...   ...        ...   \n",
-       "18357     1  PHO    120  ...    0.042  0.366   136   112   8.7        229   \n",
-       "18358     1  PHO    120  ...    0.130  0.174   125   122  -0.1        229   \n",
-       "18359     1  PHO    120  ...    0.333  0.133    84   117  -4.3        229   \n",
-       "18360     0  TOR    123  ...    0.000  0.058   195   132   0.9        236   \n",
-       "18361     0  TOR    123  ...    0.145  0.186    64   131 -17.9        236   \n",
-       "\n",
-       "       pts_diff  team_fpts     matchup  mu_fpts  \n",
-       "0           -14      228.1   (GS, LAL)    482.2  \n",
-       "1           -14      228.1   (GS, LAL)    482.2  \n",
-       "2           -14      228.1   (GS, LAL)    482.2  \n",
-       "3           -14      228.1   (GS, LAL)    482.2  \n",
-       "4           -14      228.1   (GS, LAL)    482.2  \n",
-       "...         ...        ...         ...      ...  \n",
-       "18357        11      248.9  (PHO, SAC)    459.4  \n",
-       "18358        11      248.9  (PHO, SAC)    459.4  \n",
-       "18359        11      248.9  (PHO, SAC)    459.4  \n",
-       "18360       -10      192.8  (ORL, TOR)    452.3  \n",
-       "18361       -10      192.8  (ORL, TOR)    452.3  \n",
-       "\n",
-       "[18362 rows x 53 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sorting_matchups()"
    ]
   },
   {
@@ -593,12 +160,95 @@
    "id": "impressive-toilet",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df = sort_matchups()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76e03118-4156-4192-ba6b-8c2ebab942d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f02d3e4f-8056-4bda-a337-332f7c75d6e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_teams: list[str,...] = (\n",
+    "    'MIL',\n",
+    "    'OKC',\n",
+    "    'CHA',\n",
+    "    'LAC',\n",
+    "    'ATL',\n",
+    "    'PHO',\n",
+    "    'SAC',\n",
+    "    'CLE',\n",
+    "    'MIA',\n",
+    "    'MIN',\n",
+    "    'NY',\n",
+    "    'WAS',\n",
+    "    'GS',\n",
+    "    'CHI',\n",
+    "    'BKN',\n",
+    "    'HOU'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "434bd1ae-0fa7-41b8-9d25-5c02e8904b7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "make_boxplots(teams=current_teams);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "392cae5c-38e5-4e1e-89f3-f36bc2931d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Versus these teams\n",
+    "make_boxplots(\n",
+    "    team_col='opp',\n",
+    "    teams=current_teams\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d36aafb3-afd3-48f7-b189-85ac3b79c290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total fpts in games involving teams\n",
+    "make_boxplots(\n",
+    "    fpts_col='mu_fpts',\n",
+    "    teams=current_teams\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c49317c8-e6ad-4db2-9b45-e3f548eff266",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -612,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
