--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "criminal-filename",
+   "id": "6e94fbdf-a09e-4429-9ec6-09715d485c7c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -443,7 +443,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -457,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
