--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "binding-bobby",
+   "id": "excited-situation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brutal-teacher",
+   "id": "marine-drunk",
    "metadata": {},
    "source": [
     "#### Programming Note:\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forced-depression",
+   "id": "psychological-remove",
    "metadata": {},
    "source": [
     "#### Data Note\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "female-investor",
+   "id": "patient-corpus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "numerous-ability",
+   "id": "tender-buddy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "difficult-charlotte",
+   "id": "exempt-saskatchewan",
    "metadata": {},
    "source": [
     "### Get basic overview"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bearing-module",
+   "id": "weighted-ebony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,79 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "accomplished-patrol",
+   "execution_count": null,
+   "id": "expensive-coffee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 30942 entries, 0 to 30941\n",
-      "Data columns (total 48 columns):\n",
-      " #   Column    Non-Null Count  Dtype  \n",
-      "---  ------    --------------  -----  \n",
-      " 0   Date      30942 non-null  object \n",
-      " 1   Name      30928 non-null  object \n",
-      " 2   Team      30942 non-null  object \n",
-      " 3   Opp       30942 non-null  object \n",
-      " 4   FPTS      30942 non-null  float64\n",
-      " 5   MP        30942 non-null  float64\n",
-      " 6   FPTS/MP   30942 non-null  float64\n",
-      " 7   Home      30942 non-null  int64  \n",
-      " 8   W         30942 non-null  object \n",
-      " 9   W_PTS     30942 non-null  int64  \n",
-      " 10  L         30942 non-null  object \n",
-      " 11  L_PTS     30942 non-null  int64  \n",
-      " 12  Injury    30942 non-null  int64  \n",
-      " 13  Starter   30942 non-null  int64  \n",
-      " 14  FG        30942 non-null  float64\n",
-      " 15  FGA       30942 non-null  float64\n",
-      " 16  FG_perc   30942 non-null  float64\n",
-      " 17  3P        30942 non-null  float64\n",
-      " 18  3PA       30942 non-null  float64\n",
-      " 19  3P_perc   30942 non-null  float64\n",
-      " 20  FT        30942 non-null  float64\n",
-      " 21  FTA       30942 non-null  float64\n",
-      " 22  FT_perc   30942 non-null  float64\n",
-      " 23  ORB       30942 non-null  float64\n",
-      " 24  DRB       30942 non-null  float64\n",
-      " 25  TRB       30942 non-null  float64\n",
-      " 26  AST       30942 non-null  float64\n",
-      " 27  STL       30942 non-null  float64\n",
-      " 28  BLK       30942 non-null  float64\n",
-      " 29  TOV       30942 non-null  float64\n",
-      " 30  PF        30942 non-null  float64\n",
-      " 31  PTS       30942 non-null  float64\n",
-      " 32  +/-       30942 non-null  float64\n",
-      " 33  TS_perc   30942 non-null  float64\n",
-      " 34  eFG_perc  30942 non-null  float64\n",
-      " 35  3PAr      30942 non-null  float64\n",
-      " 36  FTr       30942 non-null  float64\n",
-      " 37  ORB_perc  30942 non-null  float64\n",
-      " 38  DRB_perc  30942 non-null  float64\n",
-      " 39  TRB_perc  30942 non-null  float64\n",
-      " 40  AST_perc  30942 non-null  float64\n",
-      " 41  STL_perc  30942 non-null  float64\n",
-      " 42  BLK_perc  30942 non-null  float64\n",
-      " 43  TOV_perc  30942 non-null  float64\n",
-      " 44  USG_perc  30942 non-null  float64\n",
-      " 45  ORtg      30942 non-null  float64\n",
-      " 46  DRtg      30942 non-null  float64\n",
-      " 47  BPM       30942 non-null  float64\n",
-      "dtypes: float64(37), int64(5), object(6)\n",
-      "memory usage: 11.3+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_overview()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "removable-authority",
+   "id": "dutch-arnold",
    "metadata": {},
    "source": [
     "**Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
@@ -166,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "regular-challenge",
+   "execution_count": null,
+   "id": "governing-brazil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,28 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cross-reviewer",
+   "execution_count": null,
+   "id": "manual-guinea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "contains_missing_data( load_raw() )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "increased-booking",
+   "id": "integral-plastic",
    "metadata": {},
    "source": [
     "#### clean_data():\n",
@@ -211,8 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "mathematical-smart",
+   "execution_count": null,
+   "id": "victorian-absence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "patent-monday",
+   "execution_count": null,
+   "id": "sacred-trouble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "mysterious-childhood",
+   "execution_count": null,
+   "id": "numeric-uzbekistan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "premier-privilege",
+   "execution_count": null,
+   "id": "prospective-monte",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,81 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "considerable-header",
+   "execution_count": null,
+   "id": "premier-blend",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 19641 entries, 0 to 19640\n",
-      "Data columns (total 50 columns):\n",
-      " #   Column      Non-Null Count  Dtype  \n",
-      "---  ------      --------------  -----  \n",
-      " 0   date        19641 non-null  object \n",
-      " 1   name        19641 non-null  object \n",
-      " 2   team        19641 non-null  object \n",
-      " 3   opp         19641 non-null  object \n",
-      " 4   fpts        19641 non-null  float64\n",
-      " 5   mp          19641 non-null  float64\n",
-      " 6   fppm        19641 non-null  float64\n",
-      " 7   home        19641 non-null  int64  \n",
-      " 8   w           19641 non-null  object \n",
-      " 9   w_pts       19641 non-null  int64  \n",
-      " 10  l           19641 non-null  object \n",
-      " 11  l_pts       19641 non-null  int64  \n",
-      " 12  injury      19641 non-null  int64  \n",
-      " 13  starter     19641 non-null  int64  \n",
-      " 14  fg          19641 non-null  int64  \n",
-      " 15  fga         19641 non-null  int64  \n",
-      " 16  fg_perc     19641 non-null  float64\n",
-      " 17  3p          19641 non-null  int64  \n",
-      " 18  3pa         19641 non-null  int64  \n",
-      " 19  3p_perc     19641 non-null  float64\n",
-      " 20  ft          19641 non-null  int64  \n",
-      " 21  fta         19641 non-null  int64  \n",
-      " 22  ft_perc     19641 non-null  float64\n",
-      " 23  orb         19641 non-null  int64  \n",
-      " 24  drb         19641 non-null  int64  \n",
-      " 25  trb         19641 non-null  int64  \n",
-      " 26  ast         19641 non-null  int64  \n",
-      " 27  stl         19641 non-null  int64  \n",
-      " 28  blk         19641 non-null  int64  \n",
-      " 29  tov         19641 non-null  int64  \n",
-      " 30  pf          19641 non-null  int64  \n",
-      " 31  pts         19641 non-null  int64  \n",
-      " 32  plus_minus  19641 non-null  float64\n",
-      " 33  ts          19641 non-null  float64\n",
-      " 34  efg         19641 non-null  float64\n",
-      " 35  3par        19641 non-null  float64\n",
-      " 36  ftr         19641 non-null  float64\n",
-      " 37  orb_perc    19641 non-null  float64\n",
-      " 38  drb_perc    19641 non-null  float64\n",
-      " 39  trb_perc    19641 non-null  float64\n",
-      " 40  ast_perc    19641 non-null  float64\n",
-      " 41  stl_perc    19641 non-null  float64\n",
-      " 42  blk_perc    19641 non-null  float64\n",
-      " 43  tov_perc    19641 non-null  float64\n",
-      " 44  usg         19641 non-null  float64\n",
-      " 45  ortg        19641 non-null  int64  \n",
-      " 46  drtg        19641 non-null  int64  \n",
-      " 47  bpm         19641 non-null  float64\n",
-      " 48  total_pts   19641 non-null  int64  \n",
-      " 49  pts_diff    19641 non-null  int64  \n",
-      "dtypes: float64(20), int64(24), object(6)\n",
-      "memory usage: 7.5+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_clean().info()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "faced-weekly",
+   "id": "exceptional-rates",
    "metadata": {},
    "source": [
     "#### Final check that all cleaning tasks came out as desired\n",
@@ -404,8 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "adaptive-singles",
+   "execution_count": null,
+   "id": "classical-apparatus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,8 +287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "breathing-guinea",
+   "execution_count": null,
+   "id": "relative-district",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,11 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-<<<<<<< HEAD
-   "id": "complex-price",
-=======
-   "id": "6e94fbdf-a09e-4429-9ec6-09715d485c7c",
->>>>>>> 6b23e14c8b2a38bf76c783c5dd27ac58bd5238c7
+   "id": "eastern-spending",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -447,7 +306,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -461,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
