--- a/src/analyzing-players.ipynb
+++ b/src/analyzing-players.ipynb
@@ -201,7 +201,37 @@
    "id": "17ded98e-6cc4-4412-92a5-7b7ce0e8696c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def boom_bust(name: str, salary: int, **kwargs) -> tuple[float, float]:\n",
+    "    starter_: tuple[int,...] = (0,1) if kwargs.get('starter') is None else (int(kwargs['starter']),)\n",
+    "    df: pd.DataFrame = (fm\n",
+    "                        .load_clean_data()\n",
+    "                        .pipe(lambda df_: df_.loc[(df_['name'] == name)\n",
+    "                                                  & df_['starter'].isin(starter_)\n",
+    "                                                 ])\n",
+    "                        [['name', 'fpts']]\n",
+    "                        .set_index('name')\n",
+    "                       )\n",
+    "    \n",
+    "    five_x: float = 5 * (salary / 1000)\n",
+    "    total: int = len(df)\n",
+    "    \n",
+    "    boom: int = len(df.loc[df['fpts']>=five_x+10])\n",
+    "    bust: int = len(df.loc[df['fpts']<five_x])\n",
+    "    \n",
+    "    \n",
+    "    return (pd\n",
+    "            .Series({'boom': 100*(boom/total), 'bust': 100*(bust/total)})\n",
+    "            .round(2)\n",
+    "            # .plot\n",
+    "            # .barh(figsize=(10,5))\n",
+    "           )\n",
+    "    \n",
+    "    \n",
+    "    # return tuple([ 100*(val/total) for val in (boom, bust) ])\n",
+    "    \n",
+    "    # return df"
+   ]
   },
   {
    "cell_type": "code",
