updated season data

--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "excited-situation",
+   "id": "modern-cause",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "marine-drunk",
+   "id": "negative-thumbnail",
    "metadata": {},
    "source": [
     "#### Programming Note:\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "psychological-remove",
+   "id": "younger-fiction",
    "metadata": {},
    "source": [
     "#### Data Note\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "patient-corpus",
+   "id": "weekly-verification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "tender-buddy",
+   "id": "alpha-intention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exempt-saskatchewan",
+   "id": "fabulous-heath",
    "metadata": {},
    "source": [
     "### Get basic overview"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "weighted-ebony",
+   "id": "gorgeous-cheese",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,17 +83,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "expensive-coffee",
+   "execution_count": 5,
+   "id": "social-oregon",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 31368 entries, 0 to 31367\n",
+      "Data columns (total 48 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Date      31368 non-null  object \n",
+      " 1   Name      31354 non-null  object \n",
+      " 2   Team      31368 non-null  object \n",
+      " 3   Opp       31368 non-null  object \n",
+      " 4   FPTS      31368 non-null  float64\n",
+      " 5   MP        31368 non-null  float64\n",
+      " 6   FPTS/MP   31368 non-null  float64\n",
+      " 7   Home      31368 non-null  int64  \n",
+      " 8   W         31368 non-null  object \n",
+      " 9   W_PTS     31368 non-null  int64  \n",
+      " 10  L         31368 non-null  object \n",
+      " 11  L_PTS     31368 non-null  int64  \n",
+      " 12  Injury    31368 non-null  int64  \n",
+      " 13  Starter   31368 non-null  int64  \n",
+      " 14  FG        31368 non-null  float64\n",
+      " 15  FGA       31368 non-null  float64\n",
+      " 16  FG_perc   31368 non-null  float64\n",
+      " 17  3P        31368 non-null  float64\n",
+      " 18  3PA       31368 non-null  float64\n",
+      " 19  3P_perc   31368 non-null  float64\n",
+      " 20  FT        31368 non-null  float64\n",
+      " 21  FTA       31368 non-null  float64\n",
+      " 22  FT_perc   31368 non-null  float64\n",
+      " 23  ORB       31368 non-null  float64\n",
+      " 24  DRB       31368 non-null  float64\n",
+      " 25  TRB       31368 non-null  float64\n",
+      " 26  AST       31368 non-null  float64\n",
+      " 27  STL       31368 non-null  float64\n",
+      " 28  BLK       31368 non-null  float64\n",
+      " 29  TOV       31368 non-null  float64\n",
+      " 30  PF        31368 non-null  float64\n",
+      " 31  PTS       31368 non-null  float64\n",
+      " 32  +/-       31368 non-null  float64\n",
+      " 33  TS_perc   31368 non-null  float64\n",
+      " 34  eFG_perc  31368 non-null  float64\n",
+      " 35  3PAr      31368 non-null  float64\n",
+      " 36  FTr       31368 non-null  float64\n",
+      " 37  ORB_perc  31368 non-null  float64\n",
+      " 38  DRB_perc  31368 non-null  float64\n",
+      " 39  TRB_perc  31368 non-null  float64\n",
+      " 40  AST_perc  31368 non-null  float64\n",
+      " 41  STL_perc  31368 non-null  float64\n",
+      " 42  BLK_perc  31368 non-null  float64\n",
+      " 43  TOV_perc  31368 non-null  float64\n",
+      " 44  USG_perc  31368 non-null  float64\n",
+      " 45  ORtg      31368 non-null  float64\n",
+      " 46  DRtg      31368 non-null  float64\n",
+      " 47  BPM       31368 non-null  float64\n",
+      "dtypes: float64(37), int64(5), object(6)\n",
+      "memory usage: 11.5+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "data_overview()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dutch-arnold",
+   "id": "collectible-skiing",
    "metadata": {},
    "source": [
     "**Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
@@ -104,8 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "governing-brazil",
+   "execution_count": 6,
+   "id": "foster-lawsuit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,17 +179,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "manual-guinea",
+   "execution_count": 7,
+   "id": "documented-greene",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "contains_missing_data( load_raw() )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "integral-plastic",
+   "id": "southeast-morris",
    "metadata": {},
    "source": [
     "#### clean_data():\n",
@@ -138,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "victorian-absence",
+   "execution_count": 8,
+   "id": "exciting-bride",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,8 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "sacred-trouble",
+   "execution_count": 9,
+   "id": "fabulous-gabriel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,8 +297,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "numeric-uzbekistan",
+   "execution_count": 10,
+   "id": "tracked-japanese",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "prospective-monte",
+   "execution_count": 11,
+   "id": "experimental-raise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,17 +318,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "premier-blend",
+   "execution_count": 12,
+   "id": "complicated-reggae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 19914 entries, 0 to 19913\n",
+      "Data columns (total 50 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   date        19914 non-null  object \n",
+      " 1   name        19914 non-null  object \n",
+      " 2   team        19914 non-null  object \n",
+      " 3   opp         19914 non-null  object \n",
+      " 4   fpts        19914 non-null  float64\n",
+      " 5   mp          19914 non-null  float64\n",
+      " 6   fppm        19914 non-null  float64\n",
+      " 7   home        19914 non-null  int64  \n",
+      " 8   w           19914 non-null  object \n",
+      " 9   w_pts       19914 non-null  int64  \n",
+      " 10  l           19914 non-null  object \n",
+      " 11  l_pts       19914 non-null  int64  \n",
+      " 12  injury      19914 non-null  int64  \n",
+      " 13  starter     19914 non-null  int64  \n",
+      " 14  fg          19914 non-null  int64  \n",
+      " 15  fga         19914 non-null  int64  \n",
+      " 16  fg_perc     19914 non-null  float64\n",
+      " 17  3p          19914 non-null  int64  \n",
+      " 18  3pa         19914 non-null  int64  \n",
+      " 19  3p_perc     19914 non-null  float64\n",
+      " 20  ft          19914 non-null  int64  \n",
+      " 21  fta         19914 non-null  int64  \n",
+      " 22  ft_perc     19914 non-null  float64\n",
+      " 23  orb         19914 non-null  int64  \n",
+      " 24  drb         19914 non-null  int64  \n",
+      " 25  trb         19914 non-null  int64  \n",
+      " 26  ast         19914 non-null  int64  \n",
+      " 27  stl         19914 non-null  int64  \n",
+      " 28  blk         19914 non-null  int64  \n",
+      " 29  tov         19914 non-null  int64  \n",
+      " 30  pf          19914 non-null  int64  \n",
+      " 31  pts         19914 non-null  int64  \n",
+      " 32  plus_minus  19914 non-null  float64\n",
+      " 33  ts          19914 non-null  float64\n",
+      " 34  efg         19914 non-null  float64\n",
+      " 35  3par        19914 non-null  float64\n",
+      " 36  ftr         19914 non-null  float64\n",
+      " 37  orb_perc    19914 non-null  float64\n",
+      " 38  drb_perc    19914 non-null  float64\n",
+      " 39  trb_perc    19914 non-null  float64\n",
+      " 40  ast_perc    19914 non-null  float64\n",
+      " 41  stl_perc    19914 non-null  float64\n",
+      " 42  blk_perc    19914 non-null  float64\n",
+      " 43  tov_perc    19914 non-null  float64\n",
+      " 44  usg         19914 non-null  float64\n",
+      " 45  ortg        19914 non-null  int64  \n",
+      " 46  drtg        19914 non-null  int64  \n",
+      " 47  bpm         19914 non-null  float64\n",
+      " 48  total_pts   19914 non-null  int64  \n",
+      " 49  pts_diff    19914 non-null  int64  \n",
+      "dtypes: float64(20), int64(24), object(6)\n",
+      "memory usage: 7.6+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "load_clean().info()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "exceptional-rates",
+   "id": "supported-dakota",
    "metadata": {},
    "source": [
     "#### Final check that all cleaning tasks came out as desired\n",
@@ -267,8 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "classical-apparatus",
+   "execution_count": 13,
+   "id": "natural-colony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,6 +414,13 @@
     "    \n",
     "    clean_df: pd.DataFrame = load_clean()\n",
     "        \n",
+    "    last_date: str = tuple(clean_df\n",
+    "                           ['date']\n",
+    "                           .drop_duplicates()\n",
+    "                           .sort_values()\n",
+    "                          )[-1]\n",
+    "    \n",
+    "    print(f'Last date: {last_date}\\n')\n",
     "    assert(not contains_missing_data(clean_df))\n",
     "    assert(not len([char for char in ''.join(clean_df.columns) if char.isupper() or char== '-' ]))\n",
     "    assert(not len(clean_df.loc[clean_df['mp'] == 0.0]))\n",
@@ -287,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "relative-district",
+   "execution_count": 14,
+   "id": "gentle-neighbor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eastern-spending",
+   "id": "efficient-friday",
    "metadata": {},
    "outputs": [],
    "source": []
